force-app/main/default/objects/AARPCFS_Settings__c/AARPCFS_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings: Number of days of inactivity users, Community name, Completed Learning URL</description>
    <label>AARPCFS_Settings</label>
</CustomObject>