force-app/main/default/objects/AARPCFS_Settings__c/fields/ADS_Salesforce_Profiles__c.field-meta.xml
<CustomField>
    <fullName>ADS_Salesforce_Profiles__c</fullName>
    <defaultValue>&#39;System Administrator, Driver Safety Staff - LMS Admin&#39;</defaultValue>
    <description>Users with those profiles don&#39;t have contacts but with access to &#39;Driver Safety Courses&#39; tab.</description>
    <inlineHelpText>Please add a comma-separated names of the profiles.</inlineHelpText>
    <label>ADS Salesforce Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>