force-app/main/default/objects/AARPCFS_Settings__c/fields/Assignment_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Field_Id__c</fullName>
    <label>Assignment Field Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>