force-app/main/default/objects/AARPCFS_Settings__c/fields/Class_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Class_Field_Id__c</fullName>
    <label>Class Field Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>