force-app/main/default/objects/AARPCFS_Settings__c/fields/Course_Id_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Id_Field_Id__c</fullName>
    <label>Course Id Field Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>