force-app/main/default/objects/AARPCFS_Settings__c/fields/Course_Id_Notification_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Id_Notification_User_Id__c</fullName>
    <label>Course Id Notification User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>