force-app/main/default/objects/AARPCFS_Settings__c/fields/CyberSourcePaymentURL__c.field-meta.xml
<CustomField>
    <fullName>CyberSourcePaymentURL__c</fullName>
    <defaultValue>&quot;https://testsecureacceptance.cybersource.com/silent/token/create&quot;</defaultValue>
    <description>CyberSourcePaymentURL (for sandboxes and for production - http://screencast.com/t/3Wy2EitK)</description>
    <label>CyberSourcePaymentURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>