force-app/main/default/objects/AARPCFS_Settings__c/fields/Disable_Full_Class_notifications__c.field-meta.xml
<CustomField>
    <fullName>Disable_Full_Class_notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By this setting you can enable/disable  &quot;Full Class notifications&quot; from Notifications Trigger</description>
    <inlineHelpText>By this setting you can enable/disable  &quot;Full Class notifications&quot; from Notifications Trigger</inlineHelpText>
    <label>Disable &quot;Full Class notifications&quot;</label>
    <type>Checkbox</type>
</CustomField>