force-app/main/default/objects/AARPCFS_Settings__c/fields/Enable_Online_Registration_Field__c.field-meta.xml
<CustomField>
    <fullName>Enable_Online_Registration_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Online Registration Field</label>
    <type>Checkbox</type>
</CustomField>