force-app/main/default/objects/AARPCFS_Settings__c/fields/Funding_Code_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Funding_Code_Field_Id__c</fullName>
    <label>Funding Code Field Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>