force-app/main/default/objects/AARPCFS_Settings__c/fields/is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Sandbox</label>
    <type>Checkbox</type>
</CustomField>