force-app/main/default/objects/AARPCFS_Settings__c/fields/Link_to_Completed_Learning__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Completed_Learning__c</fullName>
    <description>Is used as a link directing to the Completed learning page for assigned Feedback Quiz</description>
    <inlineHelpText>Is used as a link directing to the Completed learning page for assigned Feedback Quiz</inlineHelpText>
    <label>Link to Completed Learning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>