force-app/main/default/objects/AARPCFS_Settings__c/fields/Link_to_Find_Learning__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Find_Learning__c</fullName>
    <label>Link to Find Learning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>