force-app/main/default/objects/AARPCFS_Settings__c/fields/Link_to_My_Learning__c.field-meta.xml
<CustomField>
    <fullName>Link_to_My_Learning__c</fullName>
    <label>Link to My Learning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>