force-app/main/default/objects/AARPCFS_Settings__c/fields/Send_Enrolled_class_Email_Driver_Safety__c.field-meta.xml
<CustomField>
    <fullName>Send_Enrolled_class_Email_Driver_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Enrolled class Email Driver Safety</label>
    <type>Checkbox</type>
</CustomField>