force-app/main/default/objects/AARPCFS_Settings__c/fields/Send_Rosters_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Rosters_by_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Rosters by Email</label>
    <type>Checkbox</type>
</CustomField>