force-app/main/default/objects/AARPCFS_Settings__c/fields/Verification_Statement_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Verification_Statement_Field_Id__c</fullName>
    <label>Verification Statement Field Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>